<resources>
    <string name="app_name">MEMO : Zi</string>

    <!-- all -->
    <string name="all_register">등록</string>
    <string name="all_app_logo_memo_zi">MEMO:Zi</string>
    <string name="all_cancel">취소</string>

    <!-- auth -->
    <string name="auth_kakao">카카오로 로그인</string>

    <!-- diary -->
    <string name="diary_morning">님, 좋은 아침이에요! 오늘도 화이팅! </string>
    <string name="diary_lunch">님, 벌써 점심이네요! 조금만 더 힘내요:)</string>
    <string name="diary_evening">님, 좋은 저녁이에요! 오늘 하루는 어떠셨나요?</string>
    <string name="diary_plus">오늘은 일기를 적지 않으셨어요 !\n오늘의 기억을 적어주세요 :)</string>
    <string name="diary_register">등록</string>
    <string name="item_diary_title">Diary Of Nov.</string>

    <!-- diary calender -->
    <string name="calendar_date">2023년 11월 달력</string>
    <string name="calendar_sunday">S</string>
    <string name="calendar_monday">M</string>
    <string name="calendar_tuesday">T</string>
    <string name="calendar_wednesday">W</string>
    <string name="calendar_thursday">T</string>
    <string name="calendar_friday">F</string>
    <string name="calendar_saturday">S</string>

    <!-- memo -->
    <string name="memo_edit_button">등록</string>
    <string name="memo_search_hint">메모를 검색해 보세요!</string>
    <string name="memo_edit_content_hint">메모 내용을 입력하세요!</string>
    <string name="memo_edit_title_hint">제목</string>
    <string name="memo_search_amount">카테고리에서 %d개의 메모를 발견했습니다!</string>

    <!-- memo category-->
    <string name="category_image_change">사진 변경하기</string>
    <string name="category_rename">대분류 이름 변경하기</string>
    <string name="category_change">카테고리 변경</string>

    <!--onboarding-->
    <string name="onboarding_greeting">환영해요. %s님!\n회원가입이 완료되었어요:)</string>
    <string name="onboarding_intro_memo">갑자기 떠오르는 영감이나, 꼭 해야할 일을\n메모해 보세요:)</string>
    <string name="onboarding_intro_diary">매일 매일 간단하게 일기를 기록해보세요:)\n저희가 도와드릴게요!</string>
    <string name="onboarding_intro_popup">일기를 쓸 시간을 설정해 주세요.\n팝업 알림으로 알려드릴 수도 있어요:)</string>
    <string name="onboarding_popup_setting_message">팝업 알림은 안받을래요.</string>
    <string name="onboarding_btn_text">MEMO : Zi 시작하기</string>
    
    
    <!--setting-->
    <string name="setting_title">설정</string>
    <string name="setting_information">내 가입정보</string>
    <string name="setting_using_kakao">카카오 로그인 사용중</string>
    <string name="setting_alarm">일기 알람</string>
    <string name="setting_edit_time">시간 수정</string>
    <string name="setting_popup_alarm">시간 팝업 알람</string>
    <string name="setting_customer_service">고객센터</string>
    <string name="setting_announcement">공지 사항</string>
    <string name="setting_report">문제 신고</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_leave">회원탈퇴</string>

</resources>